  * New StarPU-MPI initialization function (starpu_mpi_init_conf())
    which allows StarPU-MPI to manage reserving a core for the MPI thread, or
    merging it with CPU driver 0.
  * Add possibility to delay the termination of a task with the
    functions starpu_task_end_dep_add() which specifies the number of
    calls to the function starpu_task_end_dep_release() needed to
    trigger the task termination.
  * Add possibility to define the sequential consistency at the task level
    for each handle used by the task.
  * Add STARPU_SPECIFIC_NODE_LOCAL, STARPU_SPECIFIC_NODE_CPU, and
    STARPU_SPECIFIC_NODE_SLOW as generic values for codelet specific memory
    nodes which can be used instead of exact node numbers.
  * Add starpu_get_next_bindid() and starpu_bind_thread_on() to allow
    binding an application-started thread on a free core. Use it in
    StarPU-MPI to automatically bind the MPI thread on an available core.
  * Add STARPU_RESERVE_NCPU environment variable and
    starpu_config::reserve_ncpus field to make StarPU use a few cores
    less.

Small features:
  * Scheduling contexts may now be associated a user data pointer at creation
    time, that can later be recalled through starpu_sched_ctx_get_user_data().
  * New environment variables STARPU_SIMGRID_TASK_SUBMIT_COST and
    STARPU_SIMGRID_FETCHING_INPUT_COST to simulate the cost of task
    submission and data fetching in simgrid mode.
    This provides more accurate simgrid predictions, especially for the
    beginning of the execution and regarding data transfers.
  * New environment variable STARPU_SIMGRID_SCHED_COST to take into
    account the time to perform scheduling when running in SimGrid mode.
  * New configure option --enable-mpi-pedantic-isend (disabled by
    default) to acquire data in STARPU_RW (instead of STARPU_R) before
    performing MPI_Isend() call
  * New function starpu_worker_display_names() to display the names of
    all the workers of a specified type.